--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     outline: none;
     border: none;
     background-color: orange;
-    color: white;
+    color: black;
     cursor: pointer;
     border-radius: 10px;
     padding: 0 20px;
